# ai-buddy

./: .env.sample  .gitignore  Cargo.toml  README.md  REDME.md  ai-instructions.txt
buddy/: buddy.toml  instructions.md
buddy/.buddy/: conversation.json
src/: error.rs  main.rs
src/ais/: assistant.rs  mod.rs  msg.rs
src/buddy/: config.rs  mod.rs
src/utils/: cli.rs  files.rs
