[package]
name = "ai-buddy"
version = "0.1.0"
edition = "2021"
authors = ["Mateus Barbosa <barbosamat16@gmail.com>"]

[lints.rust]
unsafe_code = "forbid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
# OpenAI
async-openai = "0.17"
# Serialize & Deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Command Line Interface
dialoguer = "0.11"
console = "0.15"
textwrap = "0.16"
# Files
walkdir = "2"
globset = "0.4"
# Misc
derive_more = { version = "1.0.0-beta", features = [
    "from",
    "display",
    "deref",
] }
